# rust-os

./: Cargo.toml  README
.cargo/: config
.github/workflows/: rust.yml
src/: main.rs
